<resources>
    <string name="app_name">BLE测试工具</string>
    <string name="title_activity_device_connect">DeviceConnect</string>
    <string name="title_activity_characterisitic">CharacterisiticActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_change_char">ChangeCharActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">设备列表</string>
    <string name="menu_scan">扫描</string>
    <string name="menu_stop">停止</string>
    <string name="menu_services">刷新服务</string>
    <string name="menu_autoconnect">自动连接</string>
    <string name="RSSI">RSSI</string>
    <string name="menu_about">关于</string>
    <string name="menu_qrcode">二维码扫描下载APP</string>
    <string name="about1">如果有疑问，或者有好的建议，请联系:</string>
    <string name="about2">代码已在github上开源，欢迎fork和star和pull request</string>
    <string name="about3">通知的结果保存在SD根目录下txt</string>
    <string name="Descriptionlist">描述列表:</string>
    <string name="Eigenvalues">特征值:</string>
    <string name="Reading">读取</string>
    <string name="Writing">写入</string>
    <string name="Startnotification">开始通知</string>
    <string name="Bytes">字节数:0</string>
    <string name="Empty">清空</string>
    <string name="save">保存</string>
    <string name="String">字符串</string>
    <string name="Hexadecimal">十六进制</string>
    <string name="String1">字符串</string>
    <string name="Hexadecimal1">十六进制</string>
    <string name="Writevalue">写入值</string>
    <string name="Sendregularly">定时发送</string>
    <string name="Sendingtime">发送时间/ms</string>
    <string name="Total">共:0</string>
    <string name="editthevalue1">编辑按键1的值</string>
    <string name="editthevalue2">编辑按键2的值</string>
    <string name="editthevalue3">编辑按键3的值</string>
    <string name="Cancel_automatic_connection">取消自动连接</string>
    <string name="Automatically_set_to_disconnected">已设置为断开后自动连接</string>
    <string name="Press_again_to_exit">再按一次退出</string>
    <string name="total1">共</string>
    <string name="unit1">个</string>
    <string name="string2">字符串:</string>
    <string name="Hexadecimal2">十六进制:</string>
    <string name="reading_time">读取时间:</string>
    <string name="byte2">字节数：</string>
    <string name="Device_disconnected1">设备连接断开</string>
    <string name="Feature_operation">特征操作</string>
    <string name="byte_0">字节数:0</string>
    <string name="No_content_can_be_saved">没有可保存的内容!</string>
    <string name="start_Notice">开始通知</string>
    <string name="stop_Notice">停止通知</string>
    <string name="stop_send">停止发送</string>
    <string name="Send_regularly">定时发送</string>
    <string name="txt_save_to_sd">.txt文件成功保存到SD卡根目录下</string>
    <string name="Total3">共:</string>
    <string name="send_text">发送</string>
    <string name="Device_disconnected2">设备连接断开</string>
    <string name="Feature_list">特性列表</string>
    <string name="Device_connection_successful">设备连接成功！</string>
    <string name="Device_disconnected4">设备断开！</string>
    <string name="Service_list">服务列表</string>
    <string name="address">地址：</string>
    <string name="signal">信号：</string>
    <string name="Broadcast_package_name">广播包中的名称:</string>
    <string name="Broadcast_package">广播包：</string>
	 <string name="Display_value_of_notification">(此处显示通知的值)</string>
</resources>
