<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/about1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/about1" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about1"
        android:layout_centerHorizontal="true"
        android:autoLink="email"
        android:text="ken@keywish-robot.com" />

    <TextView
        android:id="@+id/about2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_email"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/about2" />

    <TextView
        android:id="@+id/tv_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about2"
        android:layout_centerHorizontal="true"
        android:autoLink="web"
        android:gravity="center"
        android:text="https://github.com/keywish/BleTools" />

    <TextView
        android:id="@+id/help1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_github"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/about3" />

</RelativeLayout>
